# text_redcolor

./: README.md  pyproject.toml
.github/workflows/: publish.yml
text_redcolor/: __init__.py  red.py
