[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text_redcolor"
version = "0.1.0"
description = "Print text in red color like print()"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Your Name" }
]
license = { text="MIT" }